--- a/css/index.css
+++ b/css/index.css
@@ -14,16 +14,18 @@ body {
 
 }
 
+.container-fluid {}
+
 .navbar {
     /* background: linear-gradient(to bottom, #000000, #035668); */
     background: transparent;
-    background-blend-mode: overlay;
     /* border-bottom: 1px solid #ffffff; */
     box-shadow: 0 10px 30px #035668;
-    position: absolute;
+    position: fixed;
     top: 0;
     z-index: 100;
     width: 100%;
+    color: transparent;
     /* height: auto; */
 }
 
@@ -114,7 +116,7 @@ ul li a {
         /* background-color: #0DE2EA;
         color: #F6648C !important; */
         transform: translateY(-5px);
-        transition: 0.4s;
+        transition: 0.1s;
     }
 
     ul li a::before {
@@ -154,16 +156,6 @@ ul li a {
 
 
 
-/* ++++++++++++++++++++++++ */
-.art {
-    background-color: #fff;
-    height: 100%;
-    position: relative;
-    margin: 0;
-    z-index: 1;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-}
 
 /* ___________________________ */
 .slide-image {
@@ -198,13 +190,13 @@ ul li a {
 .about {
     width: 100%;
     height: 100%;
-    background: linear-gradient(to bottom, #000000, #035668);
+    background: linear-gradient(180deg, #000000 30%, #035668, #000000);
     color: #fff;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding-top: 50px;
+    padding: 50px 0;
 }
 
 .about img {
@@ -215,29 +207,72 @@ ul li a {
 .about .information {
     width: 50%;
     text-align: justify;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-decoration: none;
 }
 
+.information ul li {
+    list-style-type: none;
+
+}
+
+.information h2 {}
+
 .profile {
-    background: linear-gradient(135deg, #ffffff, #022026 60%);
+    background: linear-gradient(135deg, #ffffff, #022026 70%);
     position: relative;
-    height: 35vw;
+    height: 30vw;
     width: 35vw;
-    border-radius: 5vw;
+    border-radius: 100% 100% 10px 10px;
+    border: 5px solid #000000;
     margin-top: 5vw;
     max-height: 30rem;
     max-width: 30rem;
+
+    box-shadow: 30px #035668 30px #035668 30px #035668 30px #035668;
+
 }
+
+/* ++++++++++++++++++++++++ */
+.art {
+    background: linear-gradient(180deg, #000000 30%, #035668, #000000);
+
+    height: 100%;
+    position: relative;
+    margin: 0;
+    z-index: 1;
+    box-sizing: border-box;
+    margin-bottom: 10px;
+}
+
+
 
 .profile img {
     padding: 0;
     height: 37vw;
     max-height: 35rem;
     width: 100%;
+
     position: absolute;
-    bottom: 35px;
+    bottom: 0;
     left: 51%;
     transform: translateX(-50%);
     overflow: clip;
+}
+
+/* +++++++++++++++ */
+.art h2 {
+    text-align: center;
+    background-color: #000000;
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px aquamarine, 0 0 70px aquamarine, 0 0 80px aquamarine, 0 0 100px aquamarine, 0 0 150px aquamarine;
+    color: whitesmoke;
+    margin: 0;
+    display: inline-block;
+    padding: 80px 0;
+    width: 100%;
 }
 
 /* __________________________ */
