--- a/css/index.css
+++ b/css/index.css
@@ -196,7 +196,7 @@ ul li a {
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    padding: 50px 0;
+    padding: 100px 0;
 }
 
 .about img {
@@ -227,7 +227,7 @@ ul li a {
     height: 30vw;
     width: 35vw;
     border-radius: 100% 100% 10px 10px;
-    border: 5px solid #000000;
+    border: 4px solid #ffffff;
     margin-top: 5vw;
     max-height: 30rem;
     max-width: 30rem;
@@ -246,6 +246,10 @@ ul li a {
     z-index: 1;
     box-sizing: border-box;
     margin-bottom: 10px;
+}
+
+#art {
+    margin-bottom: 0;
 }
 
 
@@ -290,3 +294,27 @@ footer {
 }
 
 /* _______________________p */
+#about,
+#art,
+#resume,
+#projects,
+#contact {
+    display: none;
+}
+
+
+#about.show {
+    display: flex;
+}
+
+#art.show,
+#heroes.show,
+#resume.show,
+#projects.show,
+#contact.show {
+    display: block;
+}
+
+.hidden {
+    display: none;
+}
