--- a/css/custom.css
+++ b/css/custom.css
@@ -33,20 +33,20 @@ canvas {
 #heroes h1 {
     width: 100%;
     font-size: 3.5rem;
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
-    animation: shine 3s ease-in-out infinite;
+    /* text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de; */
+    animation: shine 1s ease-in-out infinite;
 }
 
 @keyframes shine {
     0% {
-        text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
+        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff00de, 0 0 45px #ff00de, 0 0 60px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
     }
 
     50% {
-        text-shadow: 0 0 15px #fff, 0 0 25px #fff, 0 0 35px #fff, 0 0 45px #ff00de, 0 0 75px #ff00de, 0 0 85px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
-
+        text-shadow: 0 0 15px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 55px #ff00de, 0 0 75px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
     }
 
+    0%,
     100% {
         text-shadow: 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #ff00de, 0 0 80px #ff00de, 0 0 90px #ff00de, 0 0 110px #ff00de, 0 0 160px #ff00de;
     }
