--- a/css/index.css
+++ b/css/index.css
@@ -38,16 +38,13 @@ body {
     opacity: 0.6;
 }
 
-/* .navbar-brand animation ease in out infinite/
-/* 
-} */
+
 
 .navbar-brand {
     font-family: 'Comfortaa';
     font-size: 2vw;
-    color: #252839;
     text-transform: uppercase;
-    -webkit-text-stroke: 0.3vw #383d52;
+    -webkit-text-stroke: 0.3vw #f2f2f2;
     margin: 0;
     text-align: justify;
     text-justify: inter-word;
@@ -59,15 +56,13 @@ body {
 .navbar-brand::before {
     content: attr(data-text);
     position: absolute;
-    /* top: 0;
-    left: 0; */
     width: 0;
     height: 100%;
     color: aqua;
-    -webkit-text-stroke: 0vw #383d52;
+    -webkit-text-stroke: 0vw aqua;
     /* border-right: 1px solid aqua; */
     overflow: hidden;
-    animation: animate 5s linear infinite;
+    animation: animate 6s linear infinite;
 }
 
 @keyframes animate {
@@ -113,10 +108,8 @@ ul li a {
 
 @media screen and (min-width:768px) {
     ul li a:hover {
-        /* background-color: #0DE2EA;
-        color: #F6648C !important; */
-        transform: translateY(-5px);
-        transition: 0.1s;
+
+        background: linear-gradient(135deg, #1e30f3 0%, #e21e80 100%);
     }
 
     ul li a::before {
@@ -159,8 +152,7 @@ ul li a {
 
 /* ___________________________ */
 .slide-image {
-    background: linear-gradient(to bottom, #000000, #035668);
-
+    background: linear-gradient(to bottom, #035668, #000000, #035668);
 }
 
 .swiper {
@@ -173,7 +165,7 @@ ul li a {
     background-position: center;
     background-size: cover;
     width: 300px;
-    height: 300px;
+    height: 100%;
 }
 
 .swiper-slide img {
@@ -186,18 +178,65 @@ ul li a {
     margin-top: 90px;
 }
 
+.swiper-pagination-bullet-active {
+    background-color: #ffffff !important;
+}
+
+/* ++++++++++++++++++++++++ */
+#art {
+    /* background: linear-gradient(180deg, #000000 30%, #99b8bf, #e65252); */
+
+    height: 100%;
+    position: relative;
+    margin: 0;
+    z-index: 1;
+    box-sizing: border-box;
+
+    margin-bottom: 0;
+}
+
+
+
+
+/* +++++++++++++++ */
+.art h2 {
+    text-align: center;
+    background: linear-gradient(to bottom, #000000, #035668);
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px aquamarine, 0 0 70px aquamarine, 0 0 80px aquamarine, 0 0 100px aquamarine, 0 0 150px aquamarine;
+    color: whitesmoke;
+    margin: 0;
+    display: inline-block;
+    padding: 80px 0;
+    width: 100%;
+}
+
 /* ++++++++++++++++++++++++++ */
+
+
 .about {
     width: 100%;
     height: 100%;
-    background: linear-gradient(180deg, #000000 30%, #035668, #000000);
-    color: #fff;
+    background: linear-gradient(to bottom, #ffffff, rgb(163, 222, 222), #f2a5a5);
+    /* background: linear-gradient(135deg, #1e30f3 0%, #e21e80 100%); */
+    color: #000000;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     padding: 100px 0;
 }
+
+/* #about {
+
+    display: none;
+}
+
+.color {
+    height: 100px;
+    width: 100px;
+    margin: 10px;
+    position: absolute;
+} */
 
 .about img {
     height: 500px;
@@ -212,47 +251,29 @@ ul li a {
     flex-direction: column;
     align-items: center;
     text-decoration: none;
+    padding-left: 100px;
 }
 
 .information ul li {
     list-style-type: none;
+    color: white;
 
 }
 
-.information h2 {}
+
 
 .profile {
-    background: linear-gradient(135deg, #ffffff, #022026 70%);
     position: relative;
     height: 30vw;
     width: 35vw;
     border-radius: 100% 100% 10px 10px;
-    border: 4px solid #ffffff;
+    border: 2px solid #ffffff;
     margin-top: 5vw;
     max-height: 30rem;
     max-width: 30rem;
 
-    box-shadow: 30px #035668 30px #035668 30px #035668 30px #035668;
 
 }
-
-/* ++++++++++++++++++++++++ */
-.art {
-    background: linear-gradient(180deg, #000000 30%, #035668, #000000);
-
-    height: 100%;
-    position: relative;
-    margin: 0;
-    z-index: 1;
-    box-sizing: border-box;
-    margin-bottom: 10px;
-}
-
-#art {
-    margin-bottom: 0;
-}
-
-
 
 .profile img {
     padding: 0;
@@ -267,17 +288,6 @@ ul li a {
     overflow: clip;
 }
 
-/* +++++++++++++++ */
-.art h2 {
-    text-align: center;
-    background-color: #000000;
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px aquamarine, 0 0 70px aquamarine, 0 0 80px aquamarine, 0 0 100px aquamarine, 0 0 150px aquamarine;
-    color: whitesmoke;
-    margin: 0;
-    display: inline-block;
-    padding: 80px 0;
-    width: 100%;
-}
 
 /* __________________________ */
 footer {
@@ -317,4 +327,27 @@ footer {
 
 .hidden {
     display: none;
+}
+
+.navbar-nav {
+    font-size: 1rem;
+    /* default font size */
+}
+
+#contact {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+@media (max-width: 768px) {
+    .navbar-nav {
+        font-size: 0.875rem;
+        /* font size for small screens */
+    }
+
+    .navbar-link {}
+
+
 }
