--- a/css/custom.css
+++ b/css/custom.css
@@ -6,50 +6,40 @@ canvas {
 
 /* ---- particles.js container ---- */
 
-#heroes {
-    position: relative;
-    top: 0;
-    left: 0;
+
+
+
+
+/* ___________________________ */
+.slide-image {
+    background: linear-gradient(to bottom, #035668, #000000, #035668);
+}
+
+.swiper {
     width: 100%;
-    height: 100vh;
-    background-color: #000000;
-    padding: 0;
-    margin: 0;
-    z-index: 1;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
-#heroes .text {
-    position: absolute;
-    color: white;
-    /* font-size: 4rem; */
-    left: 50%;
-    top: 50%;
-    text-transform: uppercase;
-    transform: translate(-50%);
-    text-align: center;
-    width: 80%;
+.swiper-slide {
+    background-position: center;
+    background-size: cover;
+    width: 300px;
+    height: 100%;
 }
 
-#heroes h1 {
+.swiper-slide img {
+    display: block;
     width: 100%;
-    font-size: 3.5rem;
-    /* text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 70px #ff00de, 0 0 80px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de; */
-    animation: shine 1s ease-in-out infinite;
 }
 
-@keyframes shine {
-    0% {
-        text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #ff00de, 0 0 45px #ff00de, 0 0 60px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
-    }
+.swiper-pagination {
+    position: static;
+    margin-top: 90px;
+}
 
-    50% {
-        text-shadow: 0 0 15px #fff, 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #ff00de, 0 0 55px #ff00de, 0 0 75px #ff00de, 0 0 100px #ff00de, 0 0 150px #ff00de;
-    }
-
-    0%,
-    100% {
-        text-shadow: 0 0 20px #fff, 0 0 30px #fff, 0 0 40px #fff, 0 0 50px #ff00de, 0 0 80px #ff00de, 0 0 90px #ff00de, 0 0 110px #ff00de, 0 0 160px #ff00de;
-    }
+.swiper-pagination-bullet-active {
+    background-color: #ffffff !important;
 }
 
 /* ---- stats.js ---- */
@@ -105,5 +95,15 @@ canvas {
 .container span {
     line-height: 1.2;
     font-size: calc(1.3rem + 0.6vw);
+
+}
+
+.bg-gradient-2 {
+    background: linear-gradient(to bottom, #000000, #035668);
+
+}
+
+.bg-gradient-1 {
+    background: linear-gradient(to bottom, #035668, #000000);
 
 }
