--- a/css/index.css
+++ b/css/index.css
@@ -128,12 +128,12 @@ ul li a {
         width: 50px;
         height: 100%;
         background: rgba(255, 255, 255, 0.5);
-        transform: skewX(45deg) translateX(150px);
+        transform: skewX(45deg) translateX(160px);
         transition: 0.5s;
     }
 
     ul li a:hover::before {
-        transform: skewX(45deg) translateX(-150px);
+        transform: skewX(45deg) translateX(-160px);
     }
 
 }
@@ -386,21 +386,13 @@ footer {
 }
 
 #contact .card {
-    width: 58rem;
+    width: 85vw;
 }
 
 
 
 @media (max-width: 768px) {
-    body {}
 
-    #contact {
-        width: 20rem;
-    }
-
-    #contact .card {
-        width: 100%;
-    }
 
     .navbar-nav {
         font-size: 0.875rem;
@@ -424,7 +416,6 @@ footer {
     }
 
     .nav-item {
-        text-align: center;
         border: 1px solid #ffffff;
         margin: 0;
         border-radius: 2px;
@@ -433,6 +424,14 @@ footer {
     .nav-link {
         border: none;
         border-radius: unset;
+    }
+
+    .nav-link i {
+        border: none;
+        border-radius: unset;
+        display: inline-block;
+        padding-left: 10px;
+
     }
 
     #heroes .text {
@@ -472,4 +471,54 @@ footer {
         text-align: center;
 
     }
+}
+
+/* IPAD */
+@media (max-width: 1024px) {
+    ul li a::before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        bottom: 0;
+        left: 0;
+        background-color: #fff;
+        visibility: hidden;
+        transform: scaleX(0);
+        transition: all 0.3s ease-in-out 0s;
+    }
+
+    .navbar-nav {
+        font-size: 0.875rem;
+        /* font size for small screens */
+    }
+
+    .navbar-brand {
+        font-size: 1rem;
+    }
+
+    .navbar-toggler {
+        padding: 0.25rem 0.5rem;
+        font-size: 0.875rem;
+        line-height: 1;
+        border: 1px solid white !important;
+        border-radius: 0.2rem;
+    }
+
+    #navbarText {
+        margin: 0;
+    }
+
+
+
+
+
+    .nav-link i {
+        border: none;
+        border-radius: unset;
+        display: inline-block;
+        padding-left: 10px;
+
+    }
+
 }
