--- a/css/index.css
+++ b/css/index.css
@@ -69,6 +69,8 @@ body {
 
 }
 
+
+
 @keyframes animate {
 
     0%,
@@ -386,10 +388,12 @@ footer {
 }
 
 #contact .card {
-    width: 85vw;
+    width: 65vw;
 }
 
-
+#contact .card ul li {
+    text-transform: initial;
+}
 
 @media (max-width: 768px) {
 
@@ -471,6 +475,10 @@ footer {
         text-align: center;
 
     }
+
+    #contact .card {
+        width: 90vw;
+    }
 }
 
 /* IPAD */
@@ -521,4 +529,7 @@ footer {
 
     }
 
+    #contact .card {
+        width: 80vw;
+    }
 }
